* 2013-04-28 - thorben.betten@open-xchange.com

 - Fix for bug 26166: Deal with possible null reference returned by
                      "com.openexchange.mail.api.IMailMessageStorage.getMessage(String, String, boolean)"
 - Fix for bug 26174: Use proper property name for server route

* 2013-04-27 - thorben.betten@open-xchange.com

 - Fix for bug 26237: Fixed possible XSS vulnerability
 - Fix for bug 26202: Avoid too long log messages if debug is disabled
 - Fix for bug 26186: Refactored config-cascade to not dynamically look-up services via ServiceTracker, using a queue for tracking instead

* 2013-04-26 - thorben.betten@open-xchange.com

 - Fix for bug 26198: Consider "timezone" URL parameter for mail module's ALL and LIST request
 - Fix for bug 26188: Improved error message if a publication has been revoked in the meantime
 - Fix for bug 26221: Convert HTML error message to plain text before logging it

* 2013-04-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 26185: Changed default values in contact-storage-ldap/cache.properties template
 - Fix for bug 26209: Don't try to load contact in case of DELETE event

* 2013-04-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 25799: Don't query contact image data for GET request   

* 2013-04-25 - thorben.betten@open-xchange.com

 - Fix for bug 26116: Invalidate cache entry on document change/deletion
 - Fix for bug 26120: Adapted logging behavior to client actions
 - Fix for bug 26170: Added template file to Debian packaging file "conffiles"

* 2013-04-23 - tobias.friedrich@open-xchange.com

 - Fix for bug 26076: Deserialize 'image1' field in user update action   

* 2013-04-23 - thorben.betten@open-xchange.com

 - Fix for bug 25791: Reliably enter stop() routine through registering own shut-down hook for document converter
 - Fix for bug 26075: Understandable error message if file name conns illegal characters
 - Fix for bug 26073: Provide statement's string representation on log invocation